<resources>
    <string name="app_name">Chat</string>
    <string name="toolbar_home_title">Chat</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_fromLoginToRegister_description">Don\'t have an account?</string>
    <string name="btn_fromLoginToRegister">Sign up!</string>
    <string name="btn_fromRegisterToLogin_description">Already have account?</string>
    <string name="btn_fromRegisterToLogin">Sign in!</string>
    <string name="input_hint_username">Username</string>
    <string name="input_hint_email">E-mail</string>
    <string name="input_hint_password">Password</string>
    <string name="login_incorrect_email_or_password_error">Incorrect email or password</string>
    <string name="register_collision_error">An account already exist with this email address</string>
    <string name="too_many_requests_error">Too many requests. Try again later.</string>
    <string name="unknown_error">Something went wrong. Try again.</string>
    <string name="no_internet_error">No internet found. Check your connection or try again.</string>
    <string name="input_validation_error_email">Please use a valid email address</string>
    <string name="input_validation_error_password">The password must be at least 6 characters</string>
    <string name="search_hint">Search</string>
    <string name="btn_register">SIGNUP</string>
    <string name="btn_logout">Log out</string>
    <string name="btn_deleteAccount">Delete account</string>
    <string name="btn_setPhoto">Load photo</string>
    <string name="input_hint_message">Message</string>
    <string name="btn_attachFile">attach file</string>
    <string name="btn_sendMessage">send message</string>
    <string name="btn_search">Search</string>
    <string name="user_lastSeen">Last seen</string>
    <string name="user_status_online">Online</string>
    <string name="date_day_yesterday">yesterday</string>
    <string name="date_day_today">today</string>
    <string name="date_time_now">now</string>
    <string name="date_time_at">at</string>
    <string name="date_time_ago">ago</string>
    <string name="image_description_photo">Photo</string>
    <string name="photo_picker_title">Choose photo</string>
    <string name="default_notification_channel_id">1</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_register">Register</string>
    <string name="title_login">Login</string>
    <string name="title_choose_photo_source">Choose</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_gallery">Gallery</string>
    <string name="img_cd_list_empty">Empty list image</string>
    <string name="img_cd_list_error">List error image</string>
    <string name="chats_list_empty_msg">You have no chats yet</string>
    <string name="messages_list_empty_msg">You have no messages yet</string>
    <string name="delete_selected_messages">Delete selected messages</string>
</resources>