<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.LoginFragment">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/title_welcome"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_register"
        android:textColor="@color/black"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_marginBottom="@dimen/large_100"
        app:layout_constraintBottom_toTopOf="@+id/username_til"
        app:layout_constraintTop_toBottomOf="@id/welcome"
        app:layout_constraintVertical_bias="1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/input_hint_username"
        app:layout_constraintBottom_toTopOf="@id/email_til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_125"
        android:autofillHints="emailAddress"
        android:hint="@string/input_hint_email"
        app:layout_constraintBottom_toTopOf="@id/password_til"
        app:layout_constraintEnd_toEndOf="@id/username_til"
        app:layout_constraintStart_toStartOf="@id/username_til"
        app:layout_constraintTop_toBottomOf="@id/username_til">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_125"
        android:hint="@string/input_hint_password"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="@id/email_til"
        app:layout_constraintStart_toStartOf="@id/email_til"
        app:layout_constraintTop_toBottomOf="@+id/email_til"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:imeOptions="actionSend"
            app:passwordToggleEnabled="true"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_125"
        android:enabled="true"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/password_til"
        app:layout_constraintStart_toStartOf="@id/password_til"
        app:layout_constraintTop_toBottomOf="@+id/password_til" />

    <TextView
        android:id="@+id/toRegister_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/btn_fromRegisterToLogin_description"
        app:layout_constraintBottom_toBottomOf="@+id/toLogin"
        app:layout_constraintEnd_toStartOf="@+id/toLogin"
        app:layout_constraintTop_toBottomOf="@id/register_button" />

    <TextView
        android:id="@+id/toLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/small_100"
        android:paddingVertical="@dimen/normal_125"
        android:text="@string/btn_fromRegisterToLogin"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>