<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ThemeOverlay.Chat.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/home_toolbar"
            app:navigationIcon="@drawable/ic_menu_24"
            app:title="@string/toolbar_home_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.kuymakov.chat.views.RecyclerStateLayout
        android:id="@+id/chats_list_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:emptyIcon="@drawable/img_empty_list"
        app:emptyText="@string/chats_list_empty_msg"
        app:errorIcon="@drawable/img_empty_list"
        app:errorText="@string/unknown_error"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:loadingLayout="@layout/chat_item_loading">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chats_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/chat_item" />
    </com.kuymakov.chat.views.RecyclerStateLayout>

    <FrameLayout
        android:id="@+id/photo_picker"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
