<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back_button_24">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/small_100"
                android:layout_marginEnd="@dimen/normal_125"
                android:imeOptions="flagNoExtractUi"
                android:queryHint="@string/search_hint"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent"
                app:searchIcon="@null" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.kuymakov.chat.views.RecyclerStateLayout
        android:id="@+id/users_list_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:emptyIcon="@drawable/img_empty_list"
        app:emptyText="@string/chats_list_empty_msg"
        app:errorIcon="@drawable/img_empty_list"
        app:errorText="@string/unknown_error"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:loadingLayout="@layout/chat_item_loading">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/users_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:listitem="@layout/user_item" />
    </com.kuymakov.chat.views.RecyclerStateLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>