<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ui.chat.ChatFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ThemeOverlay.Chat.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back_button_24">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/avatar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/title"
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_100"
                    app:layout_constraintBottom_toTopOf="@+id/status"
                    app:layout_constraintStart_toEndOf="@+id/avatar"
                    app:layout_constraintTop_toTopOf="@id/avatar"
                    app:layout_constraintVertical_bias="0.5"
                    tools:text="Username" />

                <TextView
                    android:id="@+id/status"
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/avatar"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    app:layout_constraintVertical_bias="0.5"
                    tools:text="Last seen recently" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.kuymakov.chat.views.RecyclerStateLayout
        android:id="@+id/messages_list_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:emptyIcon="@drawable/img_empty_list"
        app:emptyText="@string/messages_list_empty_msg"
        app:errorIcon="@drawable/img_empty_list"
        app:errorText="@string/unknown_error"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:progressBarEnabled="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messagesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:reverseLayout="true"
            tools:itemCount="10"
            tools:listitem="@layout/message_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/scrollDown_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/normal_100"
            app:backgroundTint="@color/gray_light"
            android:src="@drawable/ic_arrow_down_24" />
    </com.kuymakov.chat.views.RecyclerStateLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="10dp">

        <ImageButton
            android:id="@+id/attachFileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_attachFile"
            android:padding="@dimen/normal_100"
            android:src="@drawable/ic_attach_file_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/messageInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/input_hint_message"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:paddingVertical="@dimen/normal_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sendMessageButton"
            app:layout_constraintStart_toEndOf="@+id/attachFileButton"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/sendMessageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_sendMessage"
            android:padding="@dimen/normal_100"
            android:src="@drawable/ic_keyboard_voice_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>